# transport_eq_scheme_comparison

./: 1.txt  3.txt  4.txt  CMakeLists.txt  graph.py  main.cpp
res/: 0.txt  2.txt  5.txt
